Move submodules into a dedicated third-party directory.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,8 +1,8 @@
 [submodule "llvm-project"]
-	path = llvm-project
+	path = third-party/llvm-project
 	url = https://github.com/llvm/llvm-project.git
 	branch = release/16.x
 [submodule "LULESH-LLNL"]
-	path = LULESH-LLNL
+	path = third-party/LULESH-LLNL
 	url = https://github.com/LLNL/LULESH.git
 	branch = 2.0.2-dev
